# src/main/java/com/webjing/metadatamanager/service/AnnotationModelScanner.java
@@ -1,0 +1,9 @@
+package com.webjing.metadatamanager.service;
+
+import com.webjing.metadatamanager.vo.AnnotationModelVo;
+import java.util.List;
+import reactor.core.publisher.Mono;
+
+public interface AnnotationModelScanner {
+    Mono<List<AnnotationModelVo>> scanModels();
+}
